@@ -1,0 +1,23 @@
+PREHOOK: query: drop table addpart1
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: drop table addpart1
+POSTHOOK: type: DROPTABLE
+PREHOOK: query: create table addpart1 (a int) partitioned by (b string, c string)
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: create table addpart1 (a int) partitioned by (b string, c string)
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@addpart1
+PREHOOK: query: alter table addpart1 add partition (b='f', c='s')
+PREHOOK: type: ALTERTABLE_ADDPARTS
+POSTHOOK: query: alter table addpart1 add partition (b='f', c='s')
+POSTHOOK: type: ALTERTABLE_ADDPARTS
+POSTHOOK: Output: default@addpart1@b=f/c=s
+PREHOOK: query: show partitions addpart1
+PREHOOK: type: SHOWPARTITIONS
+POSTHOOK: query: show partitions addpart1
+POSTHOOK: type: SHOWPARTITIONS
+b=f/c=s
+PREHOOK: query: alter table addpart1 add partition (b='f', c='')
+PREHOOK: type: ALTERTABLE_ADDPARTS
+FAILED: Error in metadata: add partition: Value for key c is null or empty
+FAILED: Execution Error, return code 1 from org.apache.hadoop.hive.ql.exec.DDLTask
